- BETA RELEASE IS COMING SOON!

-0.1.0
- BETA RELEASE
- While this is a beta release, it is still very much a work in progress.  The mod is stable with no known bugs at this point. There are still many blocks to add and some bugs may still exist.
- Added finishing touches on the recipe generation system (this will ensure that now recipes are missed in future updates)

-0.1.1
- Added a total of 29 new blocks!
- Current Mod Block Count is at 5,806
- Added Mossy Thatch Variants
- Bugfix: fixed trim not appearing on the correct side of block on Large Arch Blocks
- Bugfix: fixed Large Arch Block GUI rotation
- Bugfix: fixed texture glitches on Half Arch Blocks
- Bugfix: fixed texture glitches on Large Half Arch Blocks
- Bugfix: fixed texture glitch on east face of 67 degree roof blocks
- Bugfix: fixed lighting/shading on 67 degree roof blocks
- Bugfix: fixed Sandstone, Red Sandstone, Smooth Sandstone and Quartz Block Pickers showing Black Marble Variants

-0.1.2 (in progress)
- Added a total of 14 new blocks!
- Current Mod Block Count is at 5,820
- Renamed Nethrite Block Variants to Netherite_VARIANT
- Added Tall Doors for Acacia, Birch, Dark Oak, Jungle, Oak, Spruce, Crimson, Warped and their Stained counterparts
- Adjusted texture placement on Arch Block trim
- Adjusted Arch GUI display to include trim
- Bugfix: fixed Stained Doors dropping two doors when broken
- Bugfix: fixed resin not dropping from spruce leaves
- Bugfix: fixed all wooden variants not breaking quickly with axe
- Bugfix: fixed some stone type variants not breaking quickly with pickaxe
- Bugfix: removed wooden wall shaped recipes to avoid conflicts with vanilla recipes (wooden walls can still be crafted in the woodcutter)
- Bugfix: fixed hitbox appearing in wrong place for Quarter Blocks with a single layer facing
- Bugfix: adjusted hitboxes for Layered Blocks to Reduce Ambient Occlusion issues




