@@ -131,10 +131,9 @@ repositories {
         url = "https://modmaven.dev"
     }
     maven {
-        // location of maven that hosts Buildify files
-        name = "Repsy"
-        url = "https://repo.repsy.io/mvn/chappie"
+        url = "https://api.modrinth.com/maven"
     }
+    mavenLocal()
 }
 
 dependencies {
@@ -144,7 +143,10 @@ dependencies {
     minecraft 'net.minecraftforge:forge:1.18.2-40.2.0'
     annotationProcessor "org.spongepowered:mixin:0.8.5:processor"
 
-    implementation fg.deobf("calibermc:buildify:0.1.0-1.18.2b")
+//    implementation fg.deobf("maven.modrinth:buildify:0.1.3-1.18.2") // modrinth variant
+    implementation fg.deobf("com.calibermc.buildify:buildify:0.1.3") // maven local
+
+
 //    compileOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}:api") // Adds JEI API as a compile dependency
 //    runtimeOnly fg.deobf("mezz.jei:jei-${mc_version}:${jei_version}") // Adds the full JEI mod as a runtime dependency
 //     implementation fg.deobf("com.tterrag.registrate:Registrate:MC${mc_version}-${registrate_version}") // Adds registrate as a dependency
