@@ -8,6 +8,7 @@
   ],
   "mixins": [
     "BlockItemMixin",
+    "AbstractContainerScreenMixin",
     "DoorBlockMixin",
     "FenceGateBlockMixin",
     "LandPathNodeMakerMixin",
